# jobApplication

./: .gitignore  CONTRIBUTING.md  README.md  start-job-app.bat
.github/: pull_request_template.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260627_0001_initial.py  20260627_0002_add_browser_capture_fields.py  20260627_0003_add_email_extraction_fields.py  20260627_0004_add_extraction_runs.py  20260702_0005_add_application_manual_notes.py
backend/app/: main.py
backend/app/api/routes/: applications.py  emails.py  extraction.py  job_ads.py  matching.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/llm/: ollama_client.py  prompts.py
backend/app/models/: application.py  application_event.py  email.py  enums.py  extraction_run.py  job_ad.py
backend/app/pipelines/: process_email.py  process_job_ad.py
backend/app/repositories/: application_events.py  applications.py  emails.py  extraction_runs.py  job_ads.py
backend/app/schemas/: application.py  email.py  extraction.py  job_ad.py  matching.py
backend/app/services/: application_service.py  email_extraction_service.py  email_service.py  extraction_service.py  job_ad_service.py  matching_service.py
backend/tests/: conftest.py  test_application_workflow.py  test_extraction_pipeline.py  test_health.py  test_job_ads.py  test_matching.py  test_ollama_client.py  test_review_workflow.py
docs/: github-workflow.md  reusable-git-infrastructure-instructions.md
extension/: README.md  manifest.json
(+13 files in other folders)
